# evm-rpc-canister

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dfx.json  icp.yaml  mise.toml  mops.toml  package-lock.json  package.json  pnpm-lock.yaml  release-plz.toml
.github/workflows/: ci.yml  publish.yml  release.yml
candid/: evm_rpc.did  hidden_endpoints.txt
canhttp/: CHANGELOG.md  Cargo.toml
canhttp/src/: lib.rs
canhttp/src/client/: mod.rs  tests.rs
canhttp/src/convert/: error.rs  mod.rs  request.rs  response.rs
canhttp/src/cycles/: mod.rs  tests.rs
canhttp/src/filter_response/: mod.rs
canhttp/src/http/: mod.rs  request.rs  response.rs  tests.rs
canhttp/src/http/json/: id.rs  mod.rs  request.rs  response.rs  tests.rs  version.rs
canhttp/src/json/: mod.rs
canhttp/src/multi/: cache.rs  mod.rs  reduce.rs  tests.rs
canhttp/src/observability/: mod.rs
canhttp/src/request/: mod.rs  tests.rs
canhttp/src/response/: mod.rs
canhttp/src/retry/: mod.rs  tests.rs
canhttp/src/validate/: mod.rs
canjsonrpc/: Cargo.toml  README.md
canjsonrpc/src/: lib.rs
canjsonrpc/src/client/: mod.rs
canjsonrpc/src/cycles/: mod.rs
canjsonrpc/src/http/: mod.rs
canjsonrpc/src/json/: mod.rs
canjsonrpc/src/retry/: mod.rs
e2e/motoko/: init.args  main.mo
e2e/rust/: Cargo.toml
e2e/rust/src/: main.rs
evm_rpc_client/: CHANGELOG.md  Cargo.toml  README.md
evm_rpc_client/src/: lib.rs
evm_rpc_client/src/fixtures/: mod.rs
evm_rpc_client/src/request/: alloy.rs  mod.rs
evm_rpc_client/src/retry/: mod.rs
evm_rpc_client/src/runtime/: mod.rs
evm_rpc_client/src/runtime/pocket_ic/: mock.rs  mod.rs
evm_rpc_types/: CHANGELOG.md  Cargo.toml
evm_rpc_types/src/: alloy.rs  lib.rs  tests.rs
evm_rpc_types/src/lifecycle/: mod.rs
evm_rpc_types/src/request/: alloy.rs  mod.rs  tests.rs
evm_rpc_types/src/response/: alloy.rs  mod.rs  test.rs
evm_rpc_types/src/result/: alloy.rs  mod.rs  tests.rs
evm_rpc_types/src/rpc_client/: mod.rs  tests.rs
mainnet/proposals/: evm_rpc_2025.02.14.md  evm_rpc_2025_10_24.md  evm_rpc_2025_11_06.md  evm_rpc_2025_12_12.md
scripts/: e2e  examples
src/: accounting.rs  arbitrary.rs  constants.rs  http.rs  main.rs  memory.rs  metrics.rs  providers.rs  types.rs
src/candid_rpc/: cketh_conversion.rs  mod.rs  tests.rs
src/http/: error.rs  legacy.rs  mod.rs  observability.rs
src/logs/: mod.rs
src/providers/: tests.rs
src/rpc_client/: mod.rs  tests.rs
src/rpc_client/eth_rpc/: mod.rs  tests.rs
src/rpc_client/eth_rpc_error/: mod.rs
src/rpc_client/json/: batch.rs  mod.rs  requests.rs  responses.rs
src/rpc_client/request/: mod.rs  tests.rs
src/types/: mod.rs  tests.rs
tests/: mock.rs  tests.rs
tests/mock_http_runtime/: mod.rs  wallet.rs
tests/mock_http_runtime/mock/: mod.rs
tests/mock_http_runtime/mock/json/: mod.rs  tests.rs
tests/mock_runtime/: mock.rs  mod.rs
tests/mock_runtime/mock/: mod.rs
tests/mock_runtime/mock/json/: mod.rs
tests/pocket_ic_runtime/: mock.rs  mod.rs
tests/setup/: mod.rs
