[package]
name = "evm_rpc"
version = "2.6.0"
description = "Interact with EVM blockchains from the Internet Computer."
authors = ["DFINITY Foundation"]
readme = "README.md"
edition = "2021"

[profile.release]
debug = false
lto = true
strip = true
opt-level = 's'

# Required by `ic-test-utilities-load-wasm`
[profile.canister-release]
inherits = "release"

[dependencies]
candid = { workspace = true }
canlog = { workspace = true }
canhttp = { workspace = true }
derive_more = { workspace = true }
ethnum = { workspace = true }
evm_rpc_types = { path = "evm_rpc_types" }
getrandom = { workspace = true }
http = { workspace = true }
ic-ethereum-types = { workspace = true }
ic-http-types = { workspace = true }
ic-metrics-encoder = { workspace = true }
ic-stable-structures = { workspace = true }
ic-cdk = { workspace = true }
ic-management-canister-types = { workspace = true }
maplit = { workspace = true }
minicbor = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
thousands = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "util"] }
url = { workspace = true }
hex = { workspace = true }
ethers-core = { workspace = true }
zeroize = { workspace = true, features = ["zeroize_derive"] }
regex = { workspace = true }

[dev-dependencies]
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
assert_matches = { workspace = true }
async-trait = { workspace = true }
candid_parser = { workspace = true }
derive_more = {workspace = true, features = ["from", "into"]}
evm_rpc_client = { path = "evm_rpc_client", features = ["alloy"] }
ic-crypto-test-utils-reproducible-rng = { git = "https://github.com/dfinity/ic", rev = "release-2024-09-26_01-31-base" }
ic-error-types = { workspace = true }
ic-management-canister-types = { workspace = true }
ic-metrics-assert = { workspace = true }
ic-test-utilities-load-wasm = { git = "https://github.com/dfinity/ic", rev = "release-2024-09-26_01-31-base" }
maplit = { workspace = true }
num-traits = { workspace = true }
pocket-ic = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }

[workspace.dependencies]
alloy-consensus = "1.0.26"
alloy-dyn-abi = "1.3.1"
alloy-primitives = "1.3.0"
alloy-rpc-types = "1.0.23"
assert_matches = "1.5.0"
async-trait = "0.1.88"
candid = { version = "0.10.13" }
canhttp = { version = "0.3.0", features = ["json", "multi"] }
canlog = { version = "0.2.0", features = ["derive"] }
candid_parser = { version = "0.1.4" }
derive_more = { version = "2.0.1", features = ["from", "into"] }
ethers-core = "2.0"
ethnum = { version = "1.5.0", features = ["serde"] }
getrandom = { version = "0.2", features = ["custom"] }
hex = "0.4.3"
http = "1.3.1"
ic-cdk = "0.18.7"
ic-cdk-bindgen = "0.1"
ic-cdk-macros = "0.17.2"
ic-certified-map = "0.4"
ic-http-types = "0.1.0"
ic-error-types = "0.2"
ic-ethereum-types = "1.0.0"
ic-management-canister-types = "0.3"
ic-metrics-assert = { version = "0.1.1", features = ["pocket_ic"] }
ic-metrics-encoder = "1.1"
ic-stable-structures = "0.6.8"
maplit = "1.0.2"
minicbor = { version = "1.0.0", features = ["alloc", "derive"] }
num-bigint = "0.4.6"
num-traits = "0.2.19"
pocket-ic = "9.0.0"
proptest = "1.6.0"
rand = "0.8.0"
regex = "1.11"
serde = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.17"
sha2 = "0.10.8"
strum = { version = "0.27.1", features = ["derive"] }
thousands = "0.2"
tokio = "1.44.1"
tower = "0.5.2"
tower-http = "0.6.2"
thiserror = "2.0.12"
url = "2.5"
zeroize = { version = "1.8", features = ["zeroize_derive"] }

[workspace]
members = ["e2e/rust", "evm_rpc_types", "evm_rpc_client"]
