[package]
name = "canjsonrpc"
version = "0.1.0"
description = "Rust library to issue requets to a JSON RPC API from a canister on the Internet Computer"
license = "Apache-2.0"
readme = "README.md"
authors = ["DFINITY Foundation"]
edition = "2021"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
documentation = "https://docs.rs/canjsonrpc"

[dependencies]
serde = { workspace = true }
