[package]
name = "evm_rpc_client"
version = "1.4.0"
description = "Rust client for interacting with the EVM RPC canister"
license = "Apache-2.0"
readme = "README.md"
authors = ["DFINITY Foundation"]
edition = "2021"
include = ["src", "Cargo.toml", "CHANGELOG.md", "LICENSE", "README.md"]
repository = "https://github.com/dfinity/evm-rpc-client"
documentation = "https://docs.rs/evm_rpc_client"

[dependencies]
alloy-rpc-types = { workspace = true }
async-trait = { workspace = true }
candid = { workspace = true }
canhttp = { workspace = true, optional = true }
evm_rpc_types = { path = "../evm_rpc_types", features = ["alloy"] }
ic-cdk = { workspace = true }
ic-error-types = { workspace = true }
pocket-ic = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true, optional = true }
strum = { workspace = true }
url = { workspace = true }

[dev-dependencies]

[features]
pocket-ic = ["dep:canhttp", "dep:pocket-ic", "dep:serde_json"]